# nounwind.rs

./: .taplo.toml  Cargo.toml  Justfile  README.md  build.rs  lefthook.yml
.github/workflows/: test.yml
examples/: abort_unwind.rs  assert_nounwind.rs  macro.rs  panic_nounwind.rs  unreachable_nounwind.rs
nounwind-macros/: Cargo.toml
nounwind-macros/src/: lib.rs
src/: lib.rs  panic_internals.rs
tests/: doesnt_panic.rs
